--- a/map-mobile.html
+++ b/map-mobile.html
@@ -3,10 +3,15 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Un monumento digital a los fallecidos por coronavirus en España durante la pandemia de 2020">
+  <meta name="keywords" content="memorial, coronavirus, covid-19, españa, fallecidos">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <link rel="apple-touch-icon" href="../../img/faviconjourno.png">
-  <link rel="icon" href="../../img/faviconjourno.png">
+  <meta property="og:title" content="Memorial 2020 - Un monumento digital a los fallecidos en por coronavirus" />
+  <meta property="og:description" content="Un monumento digital a los fallecidos por coronavirus en España durante la epidemia de 2020" />
+  <meta property="og:image" content="../../img/socials.jpg" />
+  <link rel="apple-touch-icon" href="../../img/favicon.jpg">
+  <link rel="icon" href="../../img/favicon.jpg">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
   <link rel="stylesheet" href="css/style.css">
