--- a/map-mobile.html
+++ b/map-mobile.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="memorial, coronavirus, covid-19, españa, fallecidos">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta property="og:title" content="Memorial 2020 - Un monumento digital a los fallecidos en por coronavirus" />
+  <meta property="og:title" content="Memorial 2020 - Un monumento digital a los fallecidos por coronavirus" />
   <meta property="og:description" content="Un monumento digital a los fallecidos por coronavirus en España durante la epidemia de 2020" />
   <meta property="og:image" content="../../img/socials.jpg" />
   <link rel="apple-touch-icon" href="../../img/favicon.jpg">
